[gd_scene load_steps=7 format=3 uid="uid://dkdb4cdxs5xwy"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_dq8g3"]
[ext_resource type="Theme" uid="uid://kngbhf7epf5u" path="res://assets/themes/button_theme.tres" id="2_cefig"]
[ext_resource type="Texture2D" uid="uid://dhst7nhusgrc7" path="res://assets/sprites/button_in_menu.png" id="3_mdmhq"]
[ext_resource type="FontFile" uid="uid://ce5ty20e1lf5d" path="res://assets/fonts/Ruler 9.ttf" id="4_7b1go"]
[ext_resource type="Texture2D" uid="uid://dmoiw0qs5003o" path="res://assets/sprites/back_arrow.png" id="4_sjskb"]
[ext_resource type="AudioStream" uid="uid://b4seotdpbn6dj" path="res://assets/sound/switch-93378.mp3" id="6_8eis1"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dq8g3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.72549)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -77.0
offset_right = 158.0
offset_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2

[node name="tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cefig")
text = "TUTORIAL"
icon = ExtResource("3_mdmhq")
flat = true
icon_alignment = 1

[node name="settings" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme = ExtResource("2_cefig")
text = "SETTINGS"
icon = ExtResource("3_mdmhq")
flat = true
icon_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -92.0
offset_right = 158.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2

[node name="music" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_cefig")
text = "MUSIC"
icon = ExtResource("3_mdmhq")
flat = true
icon_alignment = 1

[node name="SFX" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_cefig")
text = "SFX"
icon = ExtResource("3_mdmhq")
flat = true
icon_alignment = 1

[node name="language" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_cefig")
text = "LANGUAGE"
icon = ExtResource("3_mdmhq")
flat = true
icon_alignment = 1

[node name="back" type="Button" parent="."]
process_mode = 3
layout_mode = 1
offset_left = 26.0
offset_top = 22.0
offset_right = 151.0
offset_bottom = 145.0
theme = ExtResource("2_cefig")
icon = ExtResource("4_sjskb")
flat = true
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -173.5
offset_top = 68.0
offset_right = 173.5
offset_bottom = 219.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.756863, 0.0235294, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("4_7b1go")
theme_override_font_sizes/font_size = 150
text = "MENU"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_8eis1")

[connection signal="pressed" from="VBoxContainer/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
